--- a/reports/mono-2.0/HPLT-v2-tuk_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-tuk_Latn.yaml
@@ -148,8 +148,7 @@ docs_wds: '[[5, 1144], [5.1, 1096], [5.2, 1117], [5.3, 1100], [5.4, 1181], [5.5,
   4006], [8.9, 3709], [9, 5207], [9.1, 3430], [9.2, 2561], [9.3, 2114], [9.4, 1893],
   [9.5, 1988], [9.6, 2709], [9.7, 2423], [9.8, 1295], [9.9, 457], [10, 123]]'
 corpus: tuk_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 350221, "no_urls": 29999, "no_bad_encoding":
-  667, "pii": 4785}'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 373123, "no_urls": 37834, "no_bad_encoding": 741, "pii": 4785}'
 sentence_pairs: 3355083
 src_bytes: 594.25 MB
 src_chars: 566811877
