--- a/reports/mono-2.0/HPLT-v2-shn_Mymr.yaml
+++ b/reports/mono-2.0/HPLT-v2-shn_Mymr.yaml
@@ -61,8 +61,7 @@ docs_wds: '[[5, 119], [5.1, 104], [5.2, 124], [5.3, 136], [5.4, 122], [5.5, 114]
   88], [9.2, 55], [9.3, 45], [9.4, 21], [9.5, 19], [9.6, 29], [9.7, 30], [9.8, 22],
   [9.9, 7], [10, 1]]'
 corpus: shn_Mymr.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 15019, "no_urls": 812, "no_bad_encoding":
-  2, "pii": 34}'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 15629, "no_urls": 879, "no_bad_encoding": 2, "pii": 34}'
 sentence_pairs: 92137
 src_bytes: 55.21 MB
 src_chars: 21124058
