--- a/reports/mono-2.0/HPLT-v2-tgk_Cyrl.yaml
+++ b/reports/mono-2.0/HPLT-v2-tgk_Cyrl.yaml
@@ -235,8 +235,7 @@ docs_wds: '[[5, 9717], [5.1, 9575], [5.2, 9527], [5.3, 9675], [5.4, 11095], [5.5
   32084], [8.6, 29625], [8.7, 29229], [8.8, 29058], [8.9, 26701], [9, 30643], [9.1,
   24371], [9.2, 20781], [9.3, 18381], [9.4, 16751], [9.5, 16019], [9.6, 15950], [9.7,
   12920], [9.8, 9376], [9.9, 3871], [10, 1073]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 2137367, "no_urls": 218311,
-  "no_bad_encoding": 299, "pii": 26214}'
+hardrules_tags: '{"not_too_long": 246281, "not_too_short": 2453564, "no_urls": 222756, "no_bad_encoding": 369,  "pii": 26214}'
 sentence_pairs: 24851003
 src_bytes: 7.75 GB
 src_chars: 4565968108
