Updated reports for Kyrghyz

--- a/reports/mono-1.2/HPLT-v1.2-ky.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-ky.yaml
@@ -199,8 +199,7 @@ docs_wds: '[[0.0, 1267], [0.1, 22], [0.2, 26], [0.3, 30], [0.4, 27], [0.5, 26], 
   [8.2, 1976], [8.3, 1897], [8.4, 1665], [8.5, 1594], [8.6, 1422], [8.7, 1537], [8.8,
   1522], [8.9, 1620], [9.0, 1568], [9.1, 1647], [9.2, 1643], [9.3, 1635], [9.4, 1446],
   [9.5, 1254], [9.6, 1084], [9.7, 848], [9.8, 531], [9.9, 182], [10.0, 25]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 5485299, "no_urls": 146854,
-  "no_bad_encoding": 2349}'
+hardrules_tags: '{"not_too_long": 60935, "not_too_short": 5485786, "no_urls": 147095, "no_bad_encoding": 2319}'
 monocleaner_scores: '[[0.0, 1619465], [0.1, 182215], [0.2, 240525], [0.3, 458805],
   [0.4, 813272], [0.5, 1090556], [0.6, 1402682], [0.7, 1783529], [0.8, 2639929], [0.9,
   1517362]]'
