--- a/reports/mono-2.0/HPLT-v2-bjn_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-bjn_Latn.yaml
@@ -98,8 +98,7 @@ docs_wds: '[[5, 591], [5.1, 591], [5.2, 536], [5.3, 583], [5.4, 496], [5.5, 482]
   [9.1, 460], [9.2, 58], [9.3, 37], [9.4, 38], [9.5, 21], [9.6, 9], [9.7, 10], [9.8,
   16], [9.9, 3]]'
 corpus: bjn_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 36261, "no_urls": 7753, "no_bad_encoding":
-  15, "pii": 420}'
+hardrules_tags: '{"not_too_long": 3954, "not_too_short": 48655, "no_urls": 8436, "no_bad_encoding": 15, "pii": 420}'
 sentence_pairs: 366336
 src_bytes: 53.33 MB
 src_chars: 55627091
