--- a/reports/mono-2.0/HPLT-v2-sna_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-sna_Latn.yaml
@@ -106,8 +106,7 @@ docs_wds: '[[5, 331], [5.1, 378], [5.2, 369], [5.3, 326], [5.4, 350], [5.5, 405]
   [9, 1845], [9.1, 1073], [9.2, 1033], [9.3, 815], [9.4, 703], [9.5, 744], [9.6, 791],
   [9.7, 460], [9.8, 261], [9.9, 101], [10, 41]]'
 corpus: sna_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 81734, "no_urls": 13430, "no_bad_encoding":
-  5, "pii": 1211}'
+hardrules_tags: '{"not_too_long": 5432, "not_too_short": 142918, "no_urls": 13677, "no_bad_encoding": 5,  "pii": 1211}'
 sentence_pairs: 1201679
 src_bytes: 183.12 MB
 src_chars: 191477676
