--- a/reports/mono-2.0/HPLT-v2-hne_Deva.yaml
+++ b/reports/mono-2.0/HPLT-v2-hne_Deva.yaml
@@ -64,8 +64,7 @@ docs_wds: '[[5, 104], [5.1, 89], [5.2, 111], [5.3, 102], [5.4, 77], [5.5, 89], [
   63], [8.7, 51], [8.8, 41], [8.9, 57], [9, 42], [9.1, 41], [9.2, 30], [9.3, 19],
   [9.4, 32], [9.5, 12], [9.6, 11], [9.7, 6], [9.8, 1]]'
 corpus: hne_Deva.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 3936, "no_urls": 105, "no_bad_encoding":
-  0, "pii": 71}'
+hardrules_tags: '{"not_too_long": 823, "not_too_short": 3939, "no_urls": 171, "no_bad_encoding": 0, "pii": 71}'
 sentence_pairs: 54999
 src_bytes: 24.6 MB
 src_chars: 10541012
