Updated reports for Somali

--- a/reports/mono-1.2/HPLT-v1.2-so.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-so.yaml
@@ -221,8 +221,7 @@ docs_wds: '[[0.0, 55150], [0.1, 3337], [0.2, 3680], [0.3, 3871], [0.4, 4344], [0
   [8.5, 235], [8.6, 203], [8.7, 174], [8.8, 161], [8.9, 155], [9.0, 123], [9.1, 105],
   [9.2, 72], [9.3, 60], [9.4, 45], [9.5, 36], [9.6, 20], [9.7, 11], [9.8, 4], [9.9,
   1], [10.0, 1]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 9737562, "no_urls": 703465,
-  "no_bad_encoding": 0}'
+hardrules_tags: '{"not_too_long": 36449, "not_too_short": 9736638, "no_urls": 703990, "no_bad_encoding": 93}'
 monocleaner_scores: '[[0.0, 1784133], [0.1, 621117], [0.2, 922702], [0.3, 1507790],
   [0.4, 2337961], [0.5, 3238025], [0.6, 3730036], [0.7, 3440387], [0.8, 3776309],
   [0.9, 2247751]]'
