--- a/reports/mono-2.0/HPLT-v2-som_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-som_Latn.yaml
@@ -190,8 +190,7 @@ docs_wds: '[[5, 3197], [5.1, 3396], [5.2, 3401], [5.3, 3690], [5.4, 6513], [5.5,
   [9.3, 6550], [9.4, 5459], [9.5, 5454], [9.6, 5398], [9.7, 4272], [9.8, 2938], [9.9,
   1094], [10, 432]]'
 corpus: som_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 1313897, "no_urls": 258831,
-  "no_bad_encoding": 660, "pii": 165017}'
+hardrules_tags: '{"not_too_long": 92017, "not_too_short": 2036298, "no_urls": 444653, "no_bad_encoding": 1134, "pii": 165017}'
 sentence_pairs: 16384689
 src_bytes: 2.39 GB
 src_chars: 2549211220
