--- a/reports/mono-1.2/HPLT-v1.2-sw.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-sw.yaml
@@ -285,8 +285,7 @@ docs_wds: '[[0.0, 17508], [0.1, 2777], [0.2, 3195], [0.3, 3865], [0.4, 7023], [0
   [8.2, 1552], [8.3, 1386], [8.4, 1349], [8.5, 1052], [8.6, 1041], [8.7, 849], [8.8,
   883], [8.9, 808], [9.0, 647], [9.1, 530], [9.2, 463], [9.3, 455], [9.4, 416], [9.5,
   309], [9.6, 195], [9.7, 88], [9.8, 31], [9.9, 19], [10.0, 7]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 22220168, "no_urls": 1555564,
-  "no_bad_encoding": 15250}'
+hardrules_tags: '{"not_too_long": 241898, "not_too_short": 22222923, "no_urls": 1556483, "no_bad_encoding": 14854}'
 monocleaner_scores: '[[0.0, 2316874], [0.1, 1123837], [0.2, 3595641], [0.3, 5887801],
   [0.4, 6591747], [0.5, 14651928], [0.6, 12743397], [0.7, 12603252], [0.8, 11561969],
   [0.9, 5176706]]'
