Updated reports for Amharic

--- a/reports/mono-2.0/HPLT-v2-amh_Ethi.yaml
+++ b/reports/mono-2.0/HPLT-v2-amh_Ethi.yaml
@@ -1,3 +1,4 @@
+corpus: amh_Ethi.jsonl.tsv
 docs_collections: '[["cc22", 101206], ["cc18", 49066], ["cc21", 37502], ["wide15",
   25626], ["wide16", 15296], ["wide11", 14630], ["wide12", 11583], ["wide17", 10760],
   ["cc17", 9596], ["wide10", 3553], ["cc19", 2490], ["wide6", 2327], ["cc20", 2305],
@@ -150,38 +151,53 @@ docs_wds: '[[5, 2219], [5.1, 2281], [5.2, 2380], [5.3, 2301], [5.4, 2681], [5.5,
   4285], [8.8, 4202], [8.9, 4213], [9, 4377], [9.1, 3111], [9.2, 2635], [9.3, 2333],
   [9.4, 1727], [9.5, 1818], [9.6, 1652], [9.7, 1245], [9.8, 785], [9.9, 351], [10,
   64]]'
-corpus: amh_Ethi.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 357364, "no_urls": 40780, "no_bad_encoding":
-  426, "pii": 10338}'
+hardrules_tags: '{"not_too_long": 42640, "not_too_short": 705662, "no_urls": 54889, "no_bad_encoding": 433, "pii": 10338}'
 sentence_pairs: 7005835
 src_bytes: 2.39 GB
 src_chars: 1024632898
-src_langs: '[["am", 6116317], ["en", 550975], ["it", 91108], ["ko", 30778], ["fr",
+src_langs: '[["am", 6109113], ["en", 550975], ["it", 91108], ["ko", 30778], ["fr",
   22571], ["ru", 15228], ["de", 14487], ["zh", 11462], ["el", 10851], ["es", 9846],
-  ["ja", 8682], ["ku", 7780], ["nl", 6610], ["uk", 6035], ["cs", 5968], ["ceb", 5771],
-  ["nb", 5649], ["pt", 5510], ["sr", 5287], ["ne", 5004], ["tr", 4963], ["ca", 4515],
-  ["km", 3262], ["cv", 3002], ["ar", 2929], ["pl", 2852], ["sv", 2701], ["krc", 2624],
-  ["da", 2344], ["be", 2282], ["fi", 2281], ["sa", 2157], ["eo", 1784], ["gu", 1662],
-  ["ro", 1557], ["jv", 1455], ["id", 1449], ["la", 1387], ["hu", 1372], ["tg", 1333],
-  ["ce", 1077], ["hi", 1017], ["bcl", 945], ["hr", 923], ["vi", 921], ["az", 918],
-  ["fa", 917], ["ta", 910], ["pms", 698], ["kk", 614], ["ie", 560], ["et", 542], ["ms",
-  532], ["oc", 523], ["sl", 497], ["tl", 469], ["bg", 462], ["war", 458], ["mr", 435],
-  ["th", 352], ["eu", 339], ["mk", 337], ["uz", 314], ["pa", 305], ["io", 305], ["ps",
-  282], ["lt", 266], ["nds", 245], ["gl", 238], ["kn", 232], ["sd", 229], ["ka", 214],
-  ["te", 206], ["lv", 192], ["os", 191], ["wuu", 188], ["si", 179], ["he", 179], ["is",
-  172], ["ur", 143], ["sk", 139], ["nn", 131], ["hy", 122], ["gd", 121], ["min", 120],
-  ["su", 117], ["sw", 116], ["br", 110], ["yi", 108], ["pam", 90], ["tt", 89], ["mzn",
-  87], ["ky", 84], ["ug", 82], ["av", 81], ["af", 77], ["ia", 67], ["cy", 63], ["bn",
-  63], ["ga", 62], ["diq", 62], ["sq", 56], ["so", 56], ["lb", 56], ["bs", 56], ["ba",
-  55], ["yue", 54], ["jbo", 51], ["as", 50], ["mhr", 49], ["ml", 48], ["qu", 47],
-  ["ast", 47], ["ilo", 46], ["als", 45], ["kv", 44], ["arz", 44], ["kw", 43], ["ckb",
-  42], ["my", 40], ["mrj", 35], ["fy", 35], ["lmo", 34], ["pnb", 30], ["dv", 30],
-  ["bxr", 30], ["ht", 28], ["mg", 26], ["vo", 25], ["mn", 24], ["wa", 22], ["new",
-  20], ["myv", 18], ["tk", 17], ["cbk", 14], ["frr", 13], ["bar", 13], ["rm", 12],
-  ["sco", 10], ["or", 10], ["bo", 10], ["mt", 9], ["hsb", 9], ["gv", 9], ["eml", 9],
-  ["bh", 8], ["vec", 6], ["nap", 6], ["mai", 6], ["dsb", 6], ["azb", 6], ["lo", 4],
-  ["xal", 3], ["vls", 3], ["scn", 3], ["sah", 3], ["gn", 3], ["xmf", 2], ["mwl", 2],
-  ["dty", 2], ["vep", 1], ["li", 1], ["gom", 1], ["an", 1]]'
+  ["ja", 8682], ["ku", 7780], ["ti", 7204], ["nl", 6610], ["uk", 6035], ["cs", 5968],
+  ["ceb", 5771], ["nb", 5649], ["pt", 5510], ["sr", 5287], ["ne", 5004], ["tr", 4963],
+  ["ca", 4515], ["km", 3262], ["cv", 3002], ["ar", 2929], ["pl", 2852], ["sv", 2701],
+  ["krc", 2624], ["da", 2344], ["be", 2282], ["fi", 2281], ["sa", 2157], ["eo", 1784],
+  ["gu", 1662], ["ro", 1557], ["jv", 1455], ["id", 1449], ["la", 1387], ["hu", 1372],
+  ["tg", 1333], ["ce", 1077], ["hi", 1017], ["bcl", 945], ["hr", 923], ["vi", 921],
+  ["az", 918], ["fa", 917], ["ta", 910], ["pms", 698], ["kk", 614], ["ie", 560], ["et",
+  542], ["ms", 532], ["oc", 523], ["sl", 497], ["tl", 469], ["bg", 462], ["war", 458],
+  ["mr", 435], ["th", 352], ["eu", 339], ["mk", 337], ["uz", 314], ["pa", 305], ["io",
+  305], ["ps", 282], ["lt", 266], ["nds", 245], ["gl", 238], ["kn", 232], ["sd", 229],
+  ["ka", 214], ["te", 206], ["lv", 192], ["os", 191], ["wuu", 188], ["si", 179], ["he",
+  179], ["is", 172], ["ur", 143], ["sk", 139], ["nn", 131], ["hy", 122], ["gd", 121],
+  ["min", 120], ["su", 117], ["sw", 116], ["br", 110], ["yi", 108], ["pam", 90], ["tt",
+  89], ["mzn", 87], ["ky", 84], ["ug", 82], ["av", 81], ["af", 77], ["ia", 67], ["cy",
+  63], ["bn", 63], ["ga", 62], ["diq", 62], ["sq", 56], ["so", 56], ["lb", 56], ["bs",
+  56], ["ba", 55], ["yue", 54], ["jbo", 51], ["as", 50], ["mhr", 49], ["ml", 48],
+  ["qu", 47], ["ast", 47], ["ilo", 46], ["als", 45], ["kv", 44], ["arz", 44], ["kw",
+  43], ["ckb", 42], ["my", 40], ["mrj", 35], ["fy", 35], ["lmo", 34], ["pnb", 30],
+  ["dv", 30], ["bxr", 30], ["ht", 28], ["mg", 26], ["vo", 25], ["mn", 24], ["wa",
+  22], ["new", 20], ["myv", 18], ["tk", 17], ["cbk", 14], ["frr", 13], ["bar", 13],
+  ["rm", 12], ["sco", 10], ["or", 10], ["bo", 10], ["mt", 9], ["hsb", 9], ["gv", 9],
+  ["eml", 9], ["bh", 8], ["vec", 6], ["nap", 6], ["mai", 6], ["dsb", 6], ["azb", 6],
+  ["lo", 4], ["xal", 3], ["vls", 3], ["scn", 3], ["sah", 3], ["gn", 3], ["xmf", 2],
+  ["mwl", 2], ["dty", 2], ["vep", 1], ["li", 1], ["gom", 1], ["an", 1]]'
+src_ngrams: '{"1": [[["\u1264\u1275"], 399734], [["\u1230\u12cd"], 351453], [["\u1230\u12ce\u127d"],
+  288104], [["the"], 268082], [["\u1265\u12d9"], 264121]], "2": [[["\u12d3\u1218\u1270
+  \u121d\u1205\u1228\u1275"], 131922], [["\u12d3\u1218\u1270 \u121d\u1205\u1228\u1275."],
+  84621], [["\u12a0\u12f2\u1235 \u12a0\u1260\u1263"], 70843], [["\u121d\u12ad\u122d
+  \u1264\u1275"], 48490], [["\u134d\u122d\u12f5 \u1264\u1275"], 47456]], "3": [[["\u12a0\u12f3\u12f2\u1235
+  \u130d\u121d\u1308\u121b\u12ce\u127d \u1260\u12ed\u134b"], 11644], [["\u1270\u12c8\u12ab\u12ee\u127d
+  \u121d\u12ad\u122d \u1264\u1275"], 9813], [["\u12e8\u12a2\u1275\u12ee\u1335\u12eb
+  \u12a6\u122d\u1276\u12f6\u12ad\u1235 \u1270\u12cb\u1215\u12f6"], 9769], [["\u1270\u12cb\u1215\u12f6
+  \u1264\u1270 \u12ad\u122d\u1235\u1272\u12eb\u1295"], 9612], [["leave a comment"],
+  8551]], "4": [[["\u12a6\u122d\u1276\u12f6\u12ad\u1235 \u1270\u12cb\u1215\u12f6 \u1264\u1270
+  \u12ad\u122d\u1235\u1272\u12eb\u1295"], 8777], [["size increase font size"], 7105],
+  [["size decrease font size"], 7105], [["font size increase font"], 7105], [["font
+  size decrease font"], 7105]], "5": [[["size decrease font size increase"], 7105],
+  [["font size increase font size"], 7105], [["font size decrease font size"], 7105],
+  [["decrease font size increase font"], 7105], [["\u12e8\u12a2\u1275\u12ee\u1335\u12eb
+  \u12a6\u122d\u1276\u12f6\u12ad\u1235 \u1270\u12cb\u1215\u12f6 \u1264\u1270 \u12ad\u122d\u1235\u1272\u12eb\u1295"],
+  5385]]}'
 src_sent_tokens: '[[0, 4050], [1, 254527], [2, 281368], [3, 296349], [4, 289952],
   [5, 261847], [6, 273912], [7, 230833], [8, 216748], [9, 196959], [10, 228902], [11,
   166612], [12, 150248], [13, 141803], [14, 141651], [15, 140969], [16, 138700], [17,
@@ -552,20 +568,3 @@ timestamp: 1725649881.4067955
 ttr_src: 0.02
 unique_sents: 3859756
 warnings: []
-src_ngrams: '{"1": [[["\u1264\u1275"], 399734], [["\u1230\u12cd"], 351453], [["\u1230\u12ce\u127d"],
-  288104], [["the"], 268082], [["\u1265\u12d9"], 264121]], "2": [[["\u12d3\u1218\u1270
-  \u121d\u1205\u1228\u1275"], 131922], [["\u12d3\u1218\u1270 \u121d\u1205\u1228\u1275."],
-  84621], [["\u12a0\u12f2\u1235 \u12a0\u1260\u1263"], 70843], [["\u121d\u12ad\u122d
-  \u1264\u1275"], 48490], [["\u134d\u122d\u12f5 \u1264\u1275"], 47456]], "3": [[["\u12a0\u12f3\u12f2\u1235
-  \u130d\u121d\u1308\u121b\u12ce\u127d \u1260\u12ed\u134b"], 11644], [["\u1270\u12c8\u12ab\u12ee\u127d
-  \u121d\u12ad\u122d \u1264\u1275"], 9813], [["\u12e8\u12a2\u1275\u12ee\u1335\u12eb
-  \u12a6\u122d\u1276\u12f6\u12ad\u1235 \u1270\u12cb\u1215\u12f6"], 9769], [["\u1270\u12cb\u1215\u12f6
-  \u1264\u1270 \u12ad\u122d\u1235\u1272\u12eb\u1295"], 9612], [["leave a comment"],
-  8551]], "4": [[["\u12a6\u122d\u1276\u12f6\u12ad\u1235 \u1270\u12cb\u1215\u12f6 \u1264\u1270
-  \u12ad\u122d\u1235\u1272\u12eb\u1295"], 8777], [["size increase font size"], 7105],
-  [["size decrease font size"], 7105], [["font size increase font"], 7105], [["font
-  size decrease font"], 7105]], "5": [[["size decrease font size increase"], 7105],
-  [["font size increase font size"], 7105], [["font size decrease font size"], 7105],
-  [["decrease font size increase font"], 7105], [["\u12e8\u12a2\u1275\u12ee\u1335\u12eb
-  \u12a6\u122d\u1276\u12f6\u12ad\u1235 \u1270\u12cb\u1215\u12f6 \u1264\u1270 \u12ad\u122d\u1235\u1272\u12eb\u1295"],
-  5385]]}'
