--- a/reports/mono-1.2/HPLT-v1.2-hy.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-hy.yaml
@@ -294,8 +294,7 @@ docs_wds: '[[0.0, 23224], [0.1, 529], [0.2, 448], [0.3, 666], [0.4, 690], [0.5, 
   [8.4, 13608], [8.5, 12279], [8.6, 12118], [8.7, 11454], [8.8, 10990], [8.9, 10992],
   [9.0, 10341], [9.1, 9142], [9.2, 7357], [9.3, 6433], [9.4, 5424], [9.5, 4546], [9.6,
   3759], [9.7, 2816], [9.8, 1760], [9.9, 1050], [10.0, 305]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 30906592, "no_urls": 1775855,
-  "no_bad_encoding": 0}'
+hardrules_tags: '{"not_too_long": 244815, "not_too_short": 30908138, "no_urls": 1774705, "no_bad_encoding": 1614}'
 monocleaner_scores: '[[0.0, 5036012], [0.1, 2087841], [0.2, 2063893], [0.3, 3215735],
   [0.4, 4041298], [0.5, 5385180], [0.6, 7662952], [0.7, 9232645], [0.8, 13641790],
   [0.9, 14646082]]'
