--- a/reports/mono-2.0/HPLT-v2-san_Deva.yaml
+++ b/reports/mono-2.0/HPLT-v2-san_Deva.yaml
@@ -179,8 +179,7 @@ docs_wds: '[[5, 1217], [5.1, 1166], [5.2, 1090], [5.3, 1115], [5.4, 1361], [5.5,
   1073], [8.9, 976], [9, 904], [9.1, 811], [9.2, 665], [9.3, 562], [9.4, 442], [9.5,
   356], [9.6, 286], [9.7, 200], [9.8, 103], [9.9, 42], [10, 9]]'
 corpus: san_Deva.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 379870, "no_urls": 15016, "no_bad_encoding":
-  11, "pii": 2575}'
+hardrules_tags: '{"not_too_long": 36358, "not_too_short": 392768, "no_urls": 15829, "no_bad_encoding": 25, "pii": 2575}'
 sentence_pairs: 3281167
 src_bytes: 911.79 MB
 src_chars: 355931245
