--- a/reports/mono-1.2/HPLT-v1.2-ur.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-ur.lite.yaml
@@ -1719,3 +1719,4 @@ srclang: ur
 timestamp: 1717841856.7233617
 unique_sents: 32444347
 warnings: []
+hardrules_tags: '{"not_too_long": 570080, "not_too_short": 45611066, "no_urls": 2054531, "no_bad_encoding": 17909}'
