--- a/reports/mono-2.0/HPLT-v2-dik_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-dik_Latn.yaml
@@ -60,8 +60,7 @@ docs_wds: '[[5, 51], [5.1, 66], [5.2, 59], [5.3, 86], [5.4, 80], [5.5, 94], [5.6
   32], [7.9, 19], [8, 23], [8.1, 40], [8.2, 16], [8.3, 16], [8.4, 8], [8.5, 18], [8.6,
   25], [8.7, 14], [8.8, 24], [8.9, 31], [9, 44], [9.1, 151], [9.2, 5]]'
 corpus: dik_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 4693, "no_urls": 130, "no_bad_encoding":
-  26, "pii": 31}'
+hardrules_tags: '{"not_too_long": 2267, "not_too_short": 5766, "no_urls": 401, "no_bad_encoding": 26,   "pii": 31}'
 sentence_pairs: 34647
 src_bytes: 12.52 MB
 src_chars: 11505568
