Updated reports for Basque

--- a/reports/mono-1.2/HPLT-v1.2-eu.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-eu.yaml
@@ -275,8 +275,7 @@ docs_wds: '[[0.0, 17202], [0.1, 1016], [0.2, 1040], [0.3, 1295], [0.4, 1580], [0
   5350], [8.4, 4818], [8.5, 4589], [8.6, 4181], [8.7, 4122], [8.8, 3887], [8.9, 3585],
   [9.0, 3328], [9.1, 2802], [9.2, 2433], [9.3, 2110], [9.4, 1615], [9.5, 1278], [9.6,
   1009], [9.7, 585], [9.8, 278], [9.9, 109], [10.0, 22]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 17150147, "no_urls": 859927,
-  "no_bad_encoding": 3722}'
+hardrules_tags: '{"not_too_long": 97354, "not_too_short": 17148407, "no_urls": 860288, "no_bad_encoding": 4839}'  
 monocleaner_scores: '[[0.0, 2270765], [0.1, 988435], [0.2, 1413581], [0.3, 2141465],
   [0.4, 3232419], [0.5, 4513461], [0.6, 4438344], [0.7, 5201198], [0.8, 7016130],
   [0.9, 6010483]]'
