Updated reports for Irish

--- a/reports/mono-1.2/HPLT-v1.2-ga.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-ga.yaml
@@ -225,8 +225,7 @@ docs_wds: '[[0.0, 2532], [0.1, 251], [0.2, 375], [0.3, 713], [0.4, 604], [0.5, 8
   [8.4, 729], [8.5, 652], [8.6, 597], [8.7, 514], [8.8, 507], [8.9, 492], [9.0, 513],
   [9.1, 494], [9.2, 493], [9.3, 366], [9.4, 269], [9.5, 281], [9.6, 319], [9.7, 204],
   [9.8, 57], [9.9, 11]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 5648177, "no_urls": 379428,
-  "no_bad_encoding": 0}'
+hardrules_tags: '{"not_too_long": 40746, "not_too_short": 5648141, "no_urls": 380054, "no_bad_encoding": 104}'
 monocleaner_scores: '[[0.0, 1146374], [0.1, 600778], [0.2, 921755], [0.3, 1242522],
   [0.4, 1813407], [0.5, 2423107], [0.6, 2101382], [0.7, 2013317], [0.8, 1390935],
   [0.9, 295984]]'
