--- a/reports/mono-2.0/HPLT-v2-gle_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-gle_Latn.yaml
@@ -200,8 +200,7 @@ docs_wds: '[[5, 4458], [5.1, 4499], [5.2, 4674], [5.3, 4579], [5.4, 5046], [5.5,
   4272], [9.4, 3733], [9.5, 3427], [9.6, 3788], [9.7, 2586], [9.8, 4318], [9.9, 2218],
   [10, 130]]'
 corpus: gle_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 1133862, "no_urls": 178010,
-  "no_bad_encoding": 2633, "pii": 56250}'
+hardrules_tags: '{"not_too_long": 127600, "not_too_short": 1411744, "no_urls": 184388, "no_bad_encoding": 2849,  "pii": 56250}'
 sentence_pairs: 10993158
 src_bytes: 1.72 GB
 src_chars: 1738847965
