--- a/reports/mono-1.2/HPLT-v1.2-ca.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-ca.lite.yaml
@@ -2992,3 +2992,4 @@ srclang: ca
 timestamp: 1717860170.5963075
 unique_sents: 113244981
 warnings: []
+hardrules_tags: '{"not_too_long": 1609371, "not_too_short": 225041615, "no_urls": 10251843, "no_bad_encoding": 12062}'
