--- a/reports/mono-2.0/HPLT-v2-cat_Latn.lite.yaml
+++ b/reports/mono-2.0/HPLT-v2-cat_Latn.lite.yaml
@@ -411,8 +411,7 @@ docs_wds: '[[5, 132703], [5.1, 134674], [5.2, 141916], [5.3, 144476], [5.4, 1548
   [9.4, 313539], [9.5, 258135], [9.6, 214520], [9.7, 153472], [9.8, 91423], [9.9,
   35637], [10, 8171]]'
 corpus: HPLT-v2-cat_Latn.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 22483598, "no_urls": 5466982,
-  "no_bad_encoding": 165554, "pii": 1397532}'
+hardrules_tags: '{"not_too_long": 3591871, "not_too_short": 52095680, "no_urls": 6695224, "no_bad_encoding": 167877, "pii": 1397532}'
 sentence_pairs: 383333998
 src_bytes: 57.38 GB
 src_chars: 59821587389
