--- a/reports/mono-2.0/HPLT-v2-ssw_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-ssw_Latn.yaml
@@ -64,8 +64,7 @@ docs_wds: '[[5, 18], [5.1, 22], [5.2, 18], [5.3, 5], [5.4, 9], [5.5, 28], [5.6, 
   [8.7, 43], [8.8, 51], [8.9, 62], [9, 54], [9.1, 29], [9.2, 40], [9.3, 37], [9.4,
   31], [9.5, 20], [9.6, 20], [9.7, 26], [9.8, 6], [10, 1]]'
 corpus: ssw_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 9113, "no_urls": 570, "no_bad_encoding":
-  3, "pii": 63}'
+hardrules_tags: '{"not_too_long": 287, "not_too_short": 13517, "no_urls": 570, "no_bad_encoding": 3,   "pii": 63}'
 sentence_pairs: 62126
 src_bytes: 8.42 MB
 src_chars: 8760975
