Updated reports for Latin

--- a/reports/mono-1.2/HPLT-v1.2-la.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-la.yaml
@@ -285,8 +285,7 @@ docs_wds: '[[0.0, 32107], [0.1, 850], [0.2, 901], [0.3, 1048], [0.4, 1405], [0.5
   1123], [8.4, 981], [8.5, 1129], [8.6, 1107], [8.7, 1308], [8.8, 665], [8.9, 594],
   [9.0, 465], [9.1, 416], [9.2, 306], [9.3, 298], [9.4, 265], [9.5, 266], [9.6, 237],
   [9.7, 184], [9.8, 196], [9.9, 131], [10.0, 93]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 7886912, "no_urls": 445056,
-  "no_bad_encoding": 2139}'
+hardrules_tags: '{"not_too_long": 160692, "not_too_short": 7887702, "no_urls": 445167, "no_bad_encoding": 1748}'
 monocleaner_scores: '[[0.0, 1935832], [0.1, 774978], [0.2, 1211044], [0.3, 1643021],
   [0.4, 2477200], [0.5, 2738516], [0.6, 2984351], [0.7, 4122160], [0.8, 2865460],
   [0.9, 644378]]'
