--- a/reports/mono-1.2/HPLT-v1.2-af.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-af.yaml
@@ -326,8 +326,7 @@ docs_wds: '[[0.0, 35783], [0.1, 2754], [0.2, 4654], [0.3, 16605], [0.4, 47064], 
   2028], [8.3, 1777], [8.4, 1668], [8.5, 1542], [8.6, 1432], [8.7, 1332], [8.8, 1294],
   [8.9, 1056], [9.0, 965], [9.1, 742], [9.2, 639], [9.3, 526], [9.4, 368], [9.5, 300],
   [9.6, 189], [9.7, 120], [9.8, 70], [9.9, 26], [10.0, 5]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 31805406, "no_urls": 1795671,
-  "no_bad_encoding": 8470}'
+hardrules_tags: '{"not_too_long": 547518, "not_too_short": 31808026, "no_urls": 1797752, "no_bad_encoding": 12389}'
 monocleaner_scores: '[[0.0, 2695857], [0.1, 1263610], [0.2, 2173241], [0.3, 5532547],
   [0.4, 10715680], [0.5, 14946544], [0.6, 18825006], [0.7, 13173727], [0.8, 10482771],
   [0.9, 4892499]]'
