Updated reports for Tagalog

--- a/reports/mono-1.2/HPLT-v1.2-tl.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-tl.yaml
@@ -401,8 +401,7 @@ docs_wds: '[[0.0, 20550], [0.1, 1095], [0.2, 2436], [0.3, 37773], [0.4, 10030], 
   3887], [8.4, 3379], [8.5, 2569], [8.6, 2260], [8.7, 2145], [8.8, 1916], [8.9, 1568],
   [9.0, 1387], [9.1, 1132], [9.2, 960], [9.3, 784], [9.4, 683], [9.5, 537], [9.6,
   378], [9.7, 210], [9.8, 121], [9.9, 114], [10.0, 56]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 30474552, "no_urls": 1782198,
-  "no_bad_encoding": 0}'
+hardrules_tags: '{"not_too_long": 160609, "not_too_short": 30469395, "no_urls": 1779577, "no_bad_encoding": 1192}'
 monocleaner_scores: '[[0.0, 6775540], [0.1, 3840290], [0.2, 7468732], [0.3, 10347853],
   [0.4, 17272763], [0.5, 16715768], [0.6, 17753451], [0.7, 14319109], [0.8, 8201340],
   [0.9, 1527291]]'
