--- a/reports/mono-2.0/HPLT-v2-tum_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-tum_Latn.yaml
@@ -48,8 +48,7 @@ docs_wds: '[[5, 32], [5.1, 29], [5.2, 30], [5.3, 28], [5.4, 41], [5.5, 22], [5.6
   90], [8.6, 128], [8.7, 120], [8.8, 129], [8.9, 160], [9, 148], [9.1, 205], [9.2,
   98], [9.3, 85], [9.4, 112], [9.5, 79], [9.6, 67], [9.7, 49], [9.8, 22], [9.9, 4]]'
 corpus: tum_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 11342, "no_urls": 394, "no_bad_encoding":
-  0, "pii": 0}'
+hardrules_tags: '{"not_too_long": 1419, "not_too_short": 11445, "no_urls": 972, "no_bad_encoding": 1,   "pii": 0}'
 sentence_pairs: 99013
 src_bytes: 20.52 MB
 src_chars: 21003570
