--- a/reports/mono-2.0/HPLT-v2-ory_Orya.yaml
+++ b/reports/mono-2.0/HPLT-v2-ory_Orya.yaml
@@ -109,8 +109,7 @@ docs_wds: '[[5, 7511], [5.1, 7238], [5.2, 7555], [5.3, 8781], [5.4, 10230], [5.5
   [9.3, 1365], [9.4, 1088], [9.5, 830], [9.6, 686], [9.7, 479], [9.8, 251], [9.9,
   109], [10, 31]]'
 corpus: ory_Orya.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 309216, "no_urls": 22123, "no_bad_encoding":
-  1481, "pii": 2529}'
+hardrules_tags: '{"not_too_long": 63007, "not_too_short": 314847, "no_urls": 26347, "no_bad_encoding": 1608,   "pii": 2529}'
 sentence_pairs: 3595619
 src_bytes: 1.91 GB
 src_chars: 778355779
