--- a/reports/mono-2.0/HPLT-v2-kin_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-kin_Latn.yaml
@@ -117,8 +117,7 @@ docs_wds: '[[5, 1020], [5.1, 1031], [5.2, 1115], [5.3, 1183], [5.4, 1284], [5.5,
   1377], [8.9, 1296], [9, 1271], [9.1, 1028], [9.2, 832], [9.3, 552], [9.4, 423],
   [9.5, 346], [9.6, 245], [9.7, 166], [9.8, 80], [9.9, 28], [10, 8]]'
 corpus: kin_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 131693, "no_urls": 33803, "no_bad_encoding":
-  327, "pii": 4982}'
+hardrules_tags: '{"not_too_long": 17889, "not_too_short": 163499, "no_urls": 38731, "no_bad_encoding": 1511,   "pii": 4982}'
 sentence_pairs: 1916933
 src_bytes: 354.87 MB
 src_chars: 365284983
