--- a/reports/mono-2.0/HPLT-v2-hat_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-hat_Latn.yaml
@@ -146,8 +146,7 @@ docs_wds: '[[5, 1726], [5.1, 1790], [5.2, 1924], [5.3, 1934], [5.4, 2045], [5.5,
   [8.2, 9178], [8.3, 6685], [8.4, 5228], [8.5, 4099], [8.6, 3920], [8.7, 3619], [8.8,
   3455], [8.9, 3965], [9, 4517], [9.1, 4865], [9.2, 2168], [9.3, 1502], [9.4, 1291],
   [9.5, 1106], [9.6, 899], [9.7, 636], [9.8, 421], [9.9, 124], [10, 37]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 483700, "no_urls": 72439, "no_bad_encoding":
-  531, "pii": 8836}'
+hardrules_tags: '{"not_too_long": 37524, "not_too_short": 640432, "no_urls": 72750, "no_bad_encoding": 677,   "pii": 8836}'
 sentence_pairs: 4635460
 src_bytes: 623.02 MB
 src_chars: 634488750
