--- a/reports/mono-2.0/HPLT-v2-zul_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-zul_Latn.yaml
@@ -137,8 +137,7 @@ docs_wds: '[[5, 1174], [5.1, 1120], [5.2, 1134], [5.3, 1076], [5.4, 1176], [5.5,
   1827], [8.9, 1968], [9, 2036], [9.1, 1619], [9.2, 1388], [9.3, 1340], [9.4, 1294],
   [9.5, 1133], [9.6, 1005], [9.7, 628], [9.8, 378], [9.9, 180], [10, 156]]'
 corpus: zul_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 256414, "no_urls": 24313, "no_bad_encoding":
-  49, "pii": 4465}'
+hardrules_tags: '{"not_too_long": 22778, "not_too_short": 465697, "no_urls": 29542, "no_bad_encoding": 81,   "pii": 4465}'
 sentence_pairs: 2710379
 src_bytes: 362.23 MB
 src_chars: 378209676
