Updated reports for Icelandic

--- a/reports/mono-1.2/HPLT-v1.2-is.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-is.yaml
@@ -330,8 +330,7 @@ docs_wds: '[[0.0, 21478], [0.1, 1613], [0.2, 1573], [0.3, 1731], [0.4, 1637], [0
   7918], [8.3, 6851], [8.4, 5891], [8.5, 5052], [8.6, 4660], [8.7, 4463], [8.8, 4005],
   [8.9, 3966], [9.0, 3377], [9.1, 2834], [9.2, 2460], [9.3, 2325], [9.4, 2018], [9.5,
   1766], [9.6, 1414], [9.7, 976], [9.8, 546], [9.9, 177], [10.0, 48]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 29217143, "no_urls": 1542326,
-  "no_bad_encoding": 0}'
+hardrules_tags: '{"not_too_long": 171859, "not_too_short": 29217204, "no_urls": 1544426, "no_bad_encoding": 1053}'
 monocleaner_scores: '[[0.0, 3698820], [0.1, 1419750], [0.2, 2888763], [0.3, 4622876],
   [0.4, 7743442], [0.5, 10577926], [0.6, 12622334], [0.7, 12644022], [0.8, 5403293],
   [0.9, 569373]]'
