--- a/reports/mono-2.0/HPLT-v2-isl_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-isl_Latn.yaml
@@ -273,8 +273,7 @@ docs_wds: '[[5, 28228], [5.1, 27156], [5.2, 29128], [5.3, 28848], [5.4, 32776], 
   [9.1, 31675], [9.2, 25763], [9.3, 21322], [9.4, 18417], [9.5, 16824], [9.6, 17478],
   [9.7, 13389], [9.8, 9804], [9.9, 3492], [10, 873]]'
 corpus: isl_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 5733007, "no_urls": 1260210,
-  "no_bad_encoding": 8973, "pii": 259722}'
+hardrules_tags: '{"not_too_long": 555330, "not_too_short": 10828256, "no_urls": 1373061, "no_bad_encoding": 9681, "pii": 259722}'
 sentence_pairs: 69643257
 src_bytes: 9.8 GB
 src_chars: 9526444446
