Updated reports for Bhojpuri

--- a/reports/mono-2.0/HPLT-v2-bho_Deva.yaml
+++ b/reports/mono-2.0/HPLT-v2-bho_Deva.yaml
@@ -97,8 +97,7 @@ docs_wds: '[[5, 443], [5.1, 410], [5.2, 421], [5.3, 404], [5.4, 830], [5.5, 424]
   989], [8.4, 659], [8.5, 485], [8.6, 449], [8.7, 501], [8.8, 514], [8.9, 493], [9,
   505], [9.1, 605], [9.2, 336], [9.3, 313], [9.4, 170], [9.5, 124], [9.6, 128], [9.7,
   55], [9.8, 60], [9.9, 16], [10, 1]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 39520, "no_urls": 2663, "no_bad_encoding":
-  0, "pii": 606}'
+hardrules_tags: '{"not_too_long": 4929, "not_too_short": 40194, "no_urls": 2663, "no_bad_encoding": 0,   "pii": 606}'
 sentence_pairs: 458258
 src_bytes: 163.08 MB
 src_chars: 68219632
