--- a/reports/mono-1.2/HPLT-v1.2-cy.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-cy.yaml
@@ -219,8 +219,7 @@ docs_wds: '[[0.0, 3288], [0.1, 231], [0.2, 266], [0.3, 297], [0.4, 366], [0.5, 5
   755], [8.7, 722], [8.8, 619], [8.9, 518], [9.0, 460], [9.1, 374], [9.2, 318], [9.3,
   266], [9.4, 207], [9.5, 152], [9.6, 116], [9.7, 82], [9.8, 48], [9.9, 8], [10.0,
   5]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 5186653, "no_urls": 209343,
-  "no_bad_encoding": 0}'
+hardrules_tags: '{"not_too_long": 33877, "not_too_short": 5186110, "no_urls": 208803, "no_bad_encoding": 97}'
 monocleaner_scores: '[[0.0, 611977], [0.1, 139486], [0.2, 229505], [0.3, 352112],
   [0.4, 588327], [0.5, 1082372], [0.6, 1710597], [0.7, 2610373], [0.8, 3127657], [0.9,
   2235102]]'
