--- a/reports/mono-2.0/HPLT-v2-lug_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-lug_Latn.yaml
@@ -89,8 +89,7 @@ docs_wds: '[[5, 200], [5.1, 150], [5.2, 150], [5.3, 185], [5.4, 201], [5.5, 171]
   [9.1, 213], [9.2, 33], [9.3, 23], [9.4, 22], [9.5, 24], [9.6, 30], [9.7, 7], [9.8,
   2], [9.9, 5], [10, 3]]'
 corpus: lug_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 39502, "no_urls": 1184, "no_bad_encoding":
-  31, "pii": 522}'
+hardrules_tags: '{"not_too_long": 4530, "not_too_short": 42556, "no_urls": 1604, "no_bad_encoding": 48,   "pii": 522}'
 sentence_pairs: 407541
 src_bytes: 65.91 MB
 src_chars: 67578510
